# comfyui_sam3

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
src/: sam3-basic-usage.py
src/comfyui_sam3/: nodes.py
src/sam3/: MANIFEST.in  pyproject.toml
src/sam3/sam3/: model_builder.py
tests/: __init__.py  test_comfyui_sam3.py
workflow_example/: Workflow_SAM3_image_text.json
